# ProjektStudiaProgwZastosowaniach

./: .gitignore  README.md  pyproject.toml
programowanie_w_zastosowaniach/: db.sqlite3  manage.py
programowanie_w_zastosowaniach/get_your_home/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
programowanie_w_zastosowaniach/get_your_home/migrations/: 0001_initial.py
programowanie_w_zastosowaniach/get_your_home/templates/: add_announcement.html  announcements.html  base.html  details.html  index.html
programowanie_w_zastosowaniach/get_your_home/templates/account/: change_user_data.html  login.html  password_change.html  profile.html  register.html
programowanie_w_zastosowaniach/get_your_home/templates/annotation/: add_edit_announcement.html  admin_edit.html
programowanie_w_zastosowaniach/get_your_home/templates/announcement/: admin_edit.html  details.html  list_of_announcements.html
programowanie_w_zastosowaniach/programowanie_w_zastosowaniach/: asgi.py  settings.py  urls.py  wsgi.py
