[tool.poetry]
name = "getyourhome"
version = "0.1.0"
description = ""
authors = ["Robert Kwiecień <zensukwiecien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.1"
pillow = "10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
